--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
-PORT=5000
-MONGODB_URI=mongodb://localhost:27017/attattendance
+PORT=3000
+MONGODB_URI="mongodb+srv://admin:N0pNLT1oYfMFNuk7@cluster0.1xjsws1.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+JWT_SECRET=your_secret_key_here
