--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
-	"name": "attendance",
-	"version": "1.0.0",
-	"description": "ระบบลงทะเบียนเข้างานด้วย Node.js + MongoDB",
-	"main": "server.js",
-	"scripts": {
-	  "start": "node server.js"
-	},
-	"dependencies": {
-	  "cors": "^2.8.5",
-	  "dotenv": "^16.4.0",
-	  "express": "^4.18.2",
-	  "mongoose": "^7.4.0"
-	}
+  "name": "attendance",
+  "version": "0.0.0",
+  "private": true,
+  "scripts": {
+    "start": "node ./bin/www"
+  },
+  "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
+    "debug": "~2.6.9",
+    "dotenv": "^16.5.0",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
+    "jade": "~1.11.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.14.0",
+    "morgan": "~1.9.1"
   }
-  
+}
